styles: change ImageOverlay's buttons position to avoid overlapping with the author name

--- a/frontend/src/components/CollectionCard/CollectionCard.module.css
+++ b/frontend/src/components/CollectionCard/CollectionCard.module.css
@@ -82,6 +82,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  gap: 1.5rem;
 }
 
 .title {
