--- a/frontend/src/components/ImageCard/ImageCard.module.css
+++ b/frontend/src/components/ImageCard/ImageCard.module.css
@@ -22,7 +22,7 @@
   position: absolute;
 
   top: 12px;
-  right: 16px;
+  left: 16px;
 }
 
 .imageOverlay button:nth-child(2) {
@@ -52,7 +52,7 @@
 .imageOverlay button:nth-child(3) {
   position: absolute;
 
-  bottom: 12px;
+  top: 12px;
   right: 16px;
 }
 
